# Skattebot

./: .gitignore  .replit  README.md  config.py  csv_generator.py  data_processor.py  espn_api.py  espn_ff_scraper.py  main.py  matchups.csv  md_to_html.py  player_stats.csv  position_mapping.py  power_rankings_analysis.html  power_rankings_analysis.md  pyproject.toml  replit.md  team_analysis.py  team_stats.csv  team_summary.csv  test_auth.py  test_espn_connection.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--WEEK-14-RESULTS-AAT-defeats-AJG-89-24-80-02-by-9-22-pt_1765301267163.txt
html_generator/: __init__.py  md_to_html.py
scrapers/: __init__.py  config.py  data_processor.py  espn_ff_scraper.py  position_mapping.py  team_analysis.py
src/: __init__.py
src/analysis/: __init__.py  team_analysis.py
src/automation/: __init__.py  runner.py
src/common/: __init__.py  config.py
src/scraper/: __init__.py  csv_generator.py  data_processor.py  espn_api.py  espn_ff_scraper.py
