[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "numpy>=2.2.2",
    "openai>=2.9.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "weasyprint>=67.0",
]
